# baby-photoshop

./: README.md
baby-photoshop/: CMakeLists.txt  Detect_Image.cpp  Grayscale-Conversion.cpp  app.cpp  black-white.cpp  blur.cpp
